register user api
