# api/models/admin.js
@@ -1,23 +1,80 @@
 'use strict';
+
 var mongoose = require('mongoose'),
-    utility = require('../lib/utility.js');
+    constantsObj = require('./../../constants');
 var Schema = mongoose.Schema;
+
 var AdminSchema = new mongoose.Schema({
-    firstname: { type: String },
-    lastname: { type: String },
-    email: { type: String, required: true},
-    role: {type: mongoose.Schema.Types.ObjectId, ref: 'Role'},
-    password: { type: String, require: true},
-    access_token: [{ type: String}],
-    profile_image: { type: String},
+
+    full_name: {
+        type: String,
+        required: [true, 'First name is required'],
+        maxlength: [50, 'First name length should be less than or equal to 50 character']
+    },
+    user_name: {
+        type: String,
+        required: [true, 'Username is required'],
+        unique: [true, 'Username already exists'],
+        maxlength: [50, 'Username length should be less than or equal to 50 character']
+    },
+    email: {
+        type: String,
+        required: [true, 'Email name is required'],
+        unique: [true, 'Email already exists'],
+        maxlength: [50, 'Email length should be less than or equal to 50 character']
+    },
+    password: {
+        type: String,
+        require: [true, 'Password is required']
+    },
+    calling_code:{
+        type: String,
+        maxlength: [6, 'Calling code length cannot be more than 6 digits']
+    },
+    mobile_primary:{
+        type: String,
+        required: [true, 'Primary mobile no. is required'],
+        maxlength: [12, 'Mobile no. length should be less than or equal to 12 character']
+    },
+    mobile_secondry:{
+        type: String,
+        maxlength: [12, 'Mobile no. length should be less than or equal to 12 character']
+    },
+    role: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Role'
+    },
+    profile_image: {
+        type: String
+    },
+    status: {
+        type: String,
+        enum: ['Active', 'Deactive'],
+        default: 'Deactive'
+    },
+    is_email_verified: {
+        type: Boolean,
+        default: false
+    },
+    is_login: {
+        type: Boolean,
+        default: false
+    },
+    login_token: {
+        type: Boolean,
+        default: false
+    },
+    is_admin: {
+        type: Boolean,
+        default: false
+    },
+    deleted: {
+        type: Boolean,
+        default: false
+    }
+}, {
+    timestamps: true
 });
 
 var Admin = mongoose.model('Admin', AdminSchema);
 module.exports = Admin;
-
-Admin.find({}).exec(function(err, data) {
-	if (data.length == 0) {
-		Admin({firstname : 'neo', lastname: 'book', email : 'admin.neo@yopmail.com', password : utility.getEncryptText('Asdf!234')}).save(function(err, adminData){
-		});
-	}
-});		
